--- a/css/sass/player.scss
+++ b/css/sass/player.scss
@@ -12,12 +12,12 @@ body {
 
 .player {
 	box-shadow:0 0 10px rgba(0,0,0,.8);
-  background-color:rgba(50,50,50,.95);
+  background-color:$color;
   font-family:$font;
   position: fixed;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the player here */
   height: $player-height;
-  // background-color: #f5f5f5;
+  opacity:.9;
 }
