--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -4,6 +4,11 @@ $color: #3498db;
 @import "player";
 @import "feedImages";
 
+body 
+{
+	background:#FAFAFA;
+	font-family: $font;
+}
 #songs
 {
 	background-color:#FEFEFE;
