remove paralax on mobile
mobile paralax very jittery removed or smoothosity

--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -22,8 +22,7 @@ body {
   max-height: 100vw;
   background-position: center;
   background-size: 100% auto;
-  background-repeat: no-repeat;
-  transition: top 1s; }
+  background-repeat: no-repeat; }
 
 #description {
   background-color: white;
