--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -38,7 +38,9 @@ body {
   overflow: hidden; }
 
 #songs li {
-  padding: 15px; }
+  margin: 15px;
+  padding: 5px;
+  cursor: pointer; }
 
 body {
   background: #FAFAFA;
