--- a/css/sass/player.scss
+++ b/css/sass/player.scss
@@ -12,7 +12,7 @@ body {
 
 .player {
 	box-shadow:0 0 10px rgba(0,0,0,.8);
-  background-color:$color;
+  background-color:#FAFAFA;
   font-family:$font;
   position: fixed;
   bottom: 0;
