Hacked together usable UI

--- a/css/sass/feedImages.scss
+++ b/css/sass/feedImages.scss
@@ -7,6 +7,8 @@
 	background-size: 100% auto;
 	// z-index: 10;
 	background-repeat: no-repeat;
+	// filter:blur(500px);
+	// -webkit-filter:blur(500px);
 }
 
 #description
