--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -42,6 +42,47 @@ body {
   padding: 5px;
   cursor: pointer; }
 
+#searchContainer {
+  background: #3498db; }
+
+#title h1 {
+  margin-top: 50px;
+  text-align: center;
+  font-size: 10vw;
+  color: #fafafa; }
+
+#rssInput {
+  width: 100%;
+  border-radius: 10px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  padding: 8px;
+  margin-top: 20vh;
+  margin-bottom: 20vh;
+  border: none; }
+
+input[type="text"] {
+  font-size: 14px;
+  color: #333; }
+
+textarea:focus, input:focus {
+  outline: none; }
+
+#podcasts {
+  text-align: left;
+  padding-left: 0;
+  display: inline-block;
+  margin: 0px auto;
+  color: #3498db;
+  list-style-type: none;
+  font-size: 15px; }
+
+#tryMe {
+  color: #3498db;
+  font-size: 20px;
+  text-align: center; }
+
 body {
   background: #FAFAFA;
   font-family: "Roboto Slab", serif; }
