play pause with space

--- a/css/sass/splash.scss
+++ b/css/sass/splash.scss
@@ -8,14 +8,21 @@
 #searchContainer
 {
 background: $color;
+height:100%;
 }
 
 #title h1
 {
+  font-weight: 100;
   margin-top:50px;
   text-align: center;
   font-size: 10vw;
   color:#fafafa;
+}
+
+#title h1 b 
+{
+  font-weight: 800;
 }
 
 #rssInput
