--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -43,13 +43,18 @@ body {
   cursor: pointer; }
 
 #searchContainer {
-  background: #3498db; }
+  background: #3498db;
+  height: 100%; }
 
 #title h1 {
+  font-weight: 100;
   margin-top: 50px;
   text-align: center;
   font-size: 10vw;
   color: #fafafa; }
+
+#title h1 b {
+  font-weight: 800; }
 
 #rssInput {
   width: 100%;
@@ -86,5 +91,11 @@ textarea:focus, input:focus {
 body {
   background: #FAFAFA;
   font-family: "Roboto Slab", serif; }
+
+.fill {
+  min-height: 100%;
+  height: 100%;
+  position: absolute;
+  width: 100%; }
 
 /*# sourceMappingURL=main.css.map */
