--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -11,3 +11,10 @@ body
 	font-family: $font;
 	// overflow:hidden;
 }
+
+.fill { 
+    min-height: 100%;
+    height: 100%;
+    position: absolute;
+    width:100%
+}
