--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -65,7 +65,11 @@ body {
   padding: 8px;
   margin-top: 20vh;
   margin-bottom: 20vh;
-  border: none; }
+  border: 5px solid #3498db;
+  transition: border .3s; }
+
+#rssInput:focus {
+  border: 5px solid rgba(52, 152, 219, 0.7); }
 
 input[type="text"] {
   font-size: 14px;
