--- a/css/sass/splash.scss
+++ b/css/sass/splash.scss
@@ -35,13 +35,27 @@ height:100%;
   padding: 8px;
   margin-top:20vh;
   margin-bottom:20vh;
-  border:none;
+  border:5px solid $color;
+  transition: border .3s;
+
 }
+#rssInput:focus
+{
+   border:5px solid rgba( $color, .7 );
+}
+
+
 
 input[type="text"]
 {
     font-size:14px;
     color:#333;
+    
+}
+
+input:hover
+{
+    // box-shadow:0px 10px 10px red;
 }
 
 textarea:focus, input:focus{
