--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -110,4 +110,10 @@ body {
   position: absolute;
   width: 100%; }
 
+img {
+  width: 50px;
+  height: 50px;
+  display: block;
+  margin: 0px auto; }
+
 /*# sourceMappingURL=main.css.map */
